[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plotfile-viewer"
dynamic = ["version"]
description = "Visualization tools for AMReX files"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "Ben Wibking", email = "ben@wibking.com" },
]
dependencies = [
    "numpy>=1.21,<3",
    "scipy",
    "tqdm",
    "jupyter",
    "ipympl",
    "ipywidgets",
]

[project.urls]
Homepage = "https://github.com/BenWibking/plotfile-viewer"

[tool.setuptools.dynamic]
version = { attr = "plotfile_viewer.__version__.__version__" }

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
plotfile-viewer = { path = ".", editable = true }

[tool.pixi.dependencies]
pyamrex = ">=24.07"

[tool.pixi.tasks]
