[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "plotfile-viewer"
dynamic = ["version"]
description = "Visualization tools for AMReX files"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
authors = [
    { name = "Ben Wibking", email = "ben@wibking.com" },
]
dependencies = [
    "numpy",
    "scipy>=1.16.3,<2",
    "tqdm>=4.67.1,<5",
    "jupyter>=1.1.1,<2",
    "ipympl>=0.9.8,<0.10",
    "ipywidgets>=8.1.8,<9",
]

[project.urls]
Homepage = "https://github.com/BenWibking/plotfile-viewer"

[tool.setuptools.dynamic]
version = { attr = "plotfile_viewer.__version__.__version__" }

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64", "win-64"]

[tool.pixi.pypi-dependencies]
plotfile-viewer = { path = ".", editable = true }

[tool.pixi.dependencies]
pyamrex = ">=25.11,<26"
pytest = ">=9.0.1,<10"
pyflakes = ">=3.4.0,<4"

[tool.pixi.tasks]
